// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipToContent should match snapshot (auto-generated) 1`] = `
<a
  className="pf-c-button pf-m-primary pf-c-skip-to-content ''"
  href="string"
>
  <div>
    ReactNode
  </div>
</a>
`;

exports[`Verify Skip To Content 1`] = `
<a
  className="pf-c-button pf-m-primary pf-c-skip-to-content"
  href="#main-content"
/>
`;

exports[`Verify Skip To Content if forced to display 1`] = `
<a
  className="pf-c-button pf-m-primary pf-c-skip-to-content pf-m-focus"
  href="#main-content"
/>
`;
